tests/machine/x/lua/partial_application.error
line 10: run error: exit status 1
lua: ...kspace/mochi/tests/machine/x/lua/partial_application.lua:10: attempt to perform arithmetic on a nil value (local 'b')
stack traceback:
	...kspace/mochi/tests/machine/x/lua/partial_application.lua:10: in function '__add'
	(...tail calls...)
	...kspace/mochi/tests/machine/x/lua/partial_application.lua:39: in main chunk
	[C]: in ?

