tests/machine/x/lua/partial_application.lua
-- Generated by Mochi compiler v0.10.27 on 2006-01-02T15:04:05Z
function __add(a, b)
    if type(a) == 'table' and type(b) == 'table' then
        local out = {}
        for i = 1, #a do out[#out+1] = a[i] end
        for i = 1, #b do out[#out+1] = b[i] end
        return out
    elseif type(a) == 'string' or type(b) == 'string' then
        return tostring(a) .. tostring(b)
    else
        return a + b
    end
end
function __print(...)
    local n = select('#', ...)
    if n == 1 then
        local v = ...
        if type(v) == 'table' and (v[1] ~= nil or #v > 0) then
            local parts = {}
            for i=1,#v do parts[#parts+1] = __str(v[i]) end
            print(table.concat(parts, ' '))
            return
        end
    end
    local parts = {}
    for i=1,n do parts[#parts+1] = __str(select(i, ...)) end
    local out = table.concat(parts, ' ')
    out = string.gsub(out, ' +$', '')
    print(out)
end
function __str(v)
    local t = type(v)
    if t == 'table' then
        if v[1] ~= nil or #v > 0 then
            local parts = {}
            for i=1,#v do parts[#parts+1] = __str(v[i]) end
            return '['..table.concat(parts, ' ')..']'
        else
            local keys = {}
            for k in pairs(v) do keys[#keys+1] = k end
            table.sort(keys, function(a,b) return tostring(a)<tostring(b) end)
            local parts = {}
            for _,k in ipairs(keys) do parts[#parts+1] = __str(k)..':'..__str(v[k]) end
            return '{'..table.concat(parts, ',')..'}'
        end
    else
        if t == 'boolean' then return (v and 'True' or 'False') end
        return tostring(v)
    end
end
function add(a, b)
    return __add(a, b)
end

add5 = function(b) return add(5, b) end
__print(add5(3))
